tests/specs/publish/banned_triple_slash_directives/publish.out
Check file:///[WILDLINE]/mod.ts
Checking for slow types in the public API...
error[banned-triple-slash-directives]: triple slash directives that modify globals are not allowed
 --> [WILDLINE]mod.ts:1:1
  | 
1 | /// <reference lib="deno.ns" />
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the triple slash directive
  | 
  = hint: remove the triple slash directive

  info: instead instruct the user of your package to specify these directives
  info: or set their 'lib' compiler option appropriately
  docs: https://jsr.io/go/banned-triple-slash-directives

error[banned-triple-slash-directives]: triple slash directives that modify globals are not allowed
 --> [WILDLINE]:2:1
  | 
2 | /// <reference no-default-lib="true" />
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the triple slash directive
  | 
  = hint: remove the triple slash directive

  info: instead instruct the user of your package to specify these directives
  info: or set their 'lib' compiler option appropriately
  docs: https://jsr.io/go/banned-triple-slash-directives

error: Found 2 problems
